# compile-code

./: !  .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.githooks/: commit-msg  pre-push
.github/workflows/: ci.yml  release.yml
release/: build-requirements.in  manifest.schema.json  smoke-requirements.in  tooling-requirements.in  zizmor-artifact-trust.json
scripts/: check.py  classify_sessions.py  release_artifacts.py
src/compile_code/: __init__.py  cli.py
tests/: test_check.py  test_classify_sessions.py  test_cli.py  test_release.py
