[build-system]
requires = ["setuptools==83.0.0", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "compile-code"
version = "0.2.0"
description = "A compiler for AI coding tasks: pre-resolves repo facts before the agent's first token to reduce tool calls and token use."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Cranot" }]
keywords = ["ai", "agents", "claude-code", "context", "compiler", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    # >=13.10.0,<14: tested receipt-v3 Verify + MCP-default mode enforcement;
    # CLI/hook enforcement remains explicit at the launcher boundary.
    "roam-code<14,>=13.10.0",
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/Cranot/compile-code"
Issues = "https://github.com/Cranot/compile-code/issues"
Toolchain = "https://github.com/Cranot/roam-code"

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "PyYAML==6.0.3",
    "ruff==0.15.22",
    "zizmor==1.27.0",
]

[project.scripts]
# `compile` is the flagship name; `compile-code` and `cmpl` are collision-safe
# fallbacks (some autotools setups ship a `compile` wrapper script).
compile = "compile_code.cli:cli"
compile-code = "compile_code.cli:cli"
cmpl = "compile_code.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
